Fix error where you couldnt scroll on smaller screens

--- a/src/features/courses/Courses.css
+++ b/src/features/courses/Courses.css
@@ -1,6 +1,6 @@
 .utis-container {
   padding: 30px;
-  height: 100%;
+  min-height: 100%;
 }
 
 .utis-filters {
