--- a/src/features/dashboard/dashboard.css
+++ b/src/features/dashboard/dashboard.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     padding: 40px;
-    height: 100%;
+    min-height: 100%;
 }
 
 .main-dashboard {
