--- a/src/features/students/students.css
+++ b/src/features/students/students.css
@@ -3,7 +3,7 @@
   background-color: var(--students-purple);
   display: flex;
   justify-content: center;
- height: 100%;
+  min-height: 100%;
   padding: 30px;
 }
 
